# oreilly-scraper

./: .env  .gitignore  .gitmodules  GEMINI.MD  README.md  config.json  pyproject.toml  spec.md  test_api.py
.gemini/skills/: superpowers
docs/plans/: 2026-02-21-playwright-stealth-auth.md  2026-02-21-setup-project-parse-configuration.md  2026-02-27-playlist-scraper-design.md  2026-02-27-toc-extraction-bug-design.md  solo-33-design.md
scripts/: audit_and_reset.py  enrich_with_llm.py  reorganize_output.py
src/oreilly_scraper/: __main__.py  browser.py  chapter_downloader.py  discovery.py  exporters.py  settings.py  state.py  toc.py
src/oreilly_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_browser.py  test_chapter_downloader.py  test_discovery.py  test_enrich_with_llm.py  test_exporters.py  test_reorganize.py  test_settings.py  test_state.py  test_toc.py
