[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oreilly-scraper"
version = "0.1.0"
description = "O'Reilly PDF Downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "pypdf>=4.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "markdownify>=0.11.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
oreilly-scraper = "oreilly_scraper.__main__:main"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
